--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ header {
 
 /* Style rules for navigation area */
 nav {
-    background-color: darkorange;
+    background-color: #ffd8b7;
 }
 
 .mobile-nav a {
