--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ nav {
 }
 
 .mobile-nav a {
-    color: cornflowerblue;
+    color: navy;
     text-align: center;  
     font-size: 2em;
     text-decoration: none;
