--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ nav {
     color: navy;
     text-align: center;  
     font-size: 2em;
+    font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     padding: 3%;
     display: block;
