--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ nav {
     color: navy;
     text-align: center;  
     font-size: 2em;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, ;
     text-decoration: none;
     padding: 3%;
     display: block;
