--- a/css/styles.css
+++ b/css/styles.css
@@ -45,13 +45,13 @@ nav {
 footer {
     text-align: center;
     font-size: 0.85em;
-    background-color: #2a1f14;
-    color: #f6eee4;
+    background-color: rgb(255, 214, 164);
+    color: navy;
     padding: 1% 0;
 }
 
 footer a {
-    color: #f6eee4;
+    color: navy;
     text-decoration: none;
 }
 
