--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,19 @@
+/* Style rules for body and images */
 body{
     background-color: #ddfcfa;
 
 }
+
+img {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    /*display: inline-block;*/
+}
+
 /* Style rules for header content */
 header {
-    text-align: center;
+    /*text-align: center;*/
     font-family: Cambria, Cochin, Georgia, Times;
     
 }
