--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body{
 
 img {
     width: 100%;
-    height: 100%;
+    height: 280px;
     margin: auto;
     /*display: inline-block;*/
 }
@@ -20,14 +20,10 @@ header {
 
 /* Style rules for navigation area */
 nav {
-<<<<<<< HEAD
     background-color: #ffd8b7;
-=======
-    background-color: rgb(255, 214, 164);
     font-family: Cambria, Cochin, Georgia, Times;
     font-weight: bolder;
     color: navy;
->>>>>>> ae845dbb1c90fdd67a90d6a0446633120ba1fbaa
 }
 
 .mobile-nav a {
