--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,38 @@ footer a {
     }
 }
 
+/* Style rules for table */
+    table {
+        border: 1px solid #2a1f14;
+        border-collapse: collapse;
+        margin: 0 auto;
+    }
+
+    caption {
+        font-size: 2em;
+        font-weight: bold;
+        padding: 1%;
+    }
+
+    th, td {
+        border: 3px solid #2a1f14;
+        padding: 1%;
+    }
+
+    th {
+        background-color: #2a1f14;
+        color: #fff;
+        font-size: 1.15em;
+    }
+
+    tr:nth-child(odd) {
+        background-color: #ffd8b7;
+    }
+
+    li, td {
+        font-weight: bold;
+    }
+
 /* Media Query for Desktop Viewport */
 @media screen and (min-width: 1000px), print {
 
