--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ img {
 
 /* Style rules for header content */
 header {
-    /*text-align: center;*/
+    text-align: center;
     font-family: Cambria, Cochin, Georgia, Times;
     
 }
@@ -48,6 +48,51 @@ nav {
     height: 40px;
     width: 40px;
     color: #2a1f14;
+}
+
+/* Style rules for main content */ 
+#appointments {
+    text-align: center;
+}
+
+#appointments .appointments-email-link {
+    color: #666600; 
+    text-decoration: none;
+}
+
+#form {
+    margin-top: 2%; 
+    background-color: #f2f2f2; 
+    padding: 2%; 
+}
+
+#form h2 {
+    text-align: center;
+}
+
+/* Style rules for form elements */
+fieldset, input, select, textarea {
+    margin-bottom: 2%;
+}
+
+fieldset legend {
+    font-weight: bold;
+    font-size: 1.25em;
+}
+
+label {
+    display: block;
+    padding-top: 3%;
+}
+
+form #submit {
+    margin: 0 auto;
+    border: none;
+    display: block;
+    padding: 2%; 
+    background-color: #b3b3b3;
+    font-size: 1em; 
+    border-radius: 10px;
 }
 
 /* Style rules for footer content */
