--- a/css/styles.css
+++ b/css/styles.css
@@ -203,19 +203,58 @@ footer a {
     }
 }
 
-/* style guide for rewards pop up */
-{box-sizing: border-box;}
-
-/* Button used to open the contact form - fixed at the bottom of the page */
-.open-button {
-  background-color: navy;
-  color: white;
-  padding: 250px 250px;
-  border: none;
+/* Popup container */
+.popup {
+  position: absolute;
+    bottom: 30px;
+    left: 215px;
+    border-color: navy;
+    border-block: bold;
+    border:
   cursor: pointer;
-  opacity: 0.8;
-  position: sticky;
-  bottom: 47px;
-    left: 71px;
-    right: 80px;
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 59px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: navy;
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
 }
