--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,12 @@ h2, h4 {
    text-align: center;
 }
 
+#add-on, #mobilegrooming {
+    width: 30%;
+    align-content: center; 
+    margin: 0 2%;
+  }
+
 /* Style rules for form elements */
 fieldset, input, select, textarea {
     margin-bottom: 2%;
