--- a/css/styles.css
+++ b/css/styles.css
@@ -63,9 +63,7 @@ h2, h4 {
 }
 
 #add-on, #mobilegrooming {
-    width: 30%;
     align-content: center; 
-    margin: 0 2%;
   }
 
 /* Style rules for form elements */
@@ -213,6 +211,12 @@ footer a {
         color: #2a1f14;
         background-color: #f6eee4;
         opacity: 0.5;
+    }
+    
+    #serviceadd-ongrid {
+        display: grid;
+        grid-template-columns: auto auto;
+        
     }
 }
 {box-sizing: border-box;}
