--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ footer a {
 }
 
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 480px) {
   /* For mobile phones: */
   
     /* Mobile Viewport: Show mobile class, hide desktop-tablet class */
