--- a/css/styles.css
+++ b/css/styles.css
@@ -60,9 +60,9 @@ nav {
     font-family: monospace;
 }
 
-img{
+/*#pop-upimg {
     align-content: center;
-}
+} */
 
 #popup-intro {
     font-family: monospace;
