--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,14 @@ main {
     padding-left: 5%;
     padding-right: 5%;
     font-family: monospace;
+    font-size: large;
+    line-height: 30px;
 }
 
 #pop {
-    align-content: center;
+    text-align: center;
     font-family: monospace;
-    
+    font-size: large;
 }
 /* Style rules for navigation area */
 nav {
@@ -62,6 +64,7 @@ nav {
 
 img{
     align-content: center;
+
 }
 
 #popup-intro {
