--- a/css/styles.css
+++ b/css/styles.css
@@ -60,9 +60,9 @@ nav {
     font-family: monospace;
 }
 
-/*#pop-upimg {
+#pop-upimg {
     align-content: center;
-} */
+} 
 
 #popup-intro {
     font-family: monospace;
@@ -144,6 +144,55 @@ footer a {
     text-decoration: none;
 }
 
+/*Style rules for photo gallery */
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+    max-height: fit-content;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  -ms-flex: 30%; /* IE10 */
+  flex: 30%;
+  max-width: 30%;
+  padding: 0 4px;
+    margin: 10px;
+}
+
+.column img {
+  margin-top: 15px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
+}
 
 @media screen and (max-width: 629px) {
   /* For mobile phones: */
@@ -203,9 +252,9 @@ footer a {
         border-collapse: collapse;
         margin: 0 auto;
         width: 95%;
-        height: min-content;
+        /*height: min-content;*/
         table-layout: auto;
-    }
+    } 
 
     caption {
         font-size: 2em;
@@ -234,7 +283,7 @@ footer a {
 
     td {
         height: 10px;
-    }
+    } 
 
 /* Media Query for Desktop Viewport */
 @media screen and (min-width: 1015px), print {
